# curaengine4android

./: README.md  README_CN.md  build.gradle
com.example.myapplication/definitions/: fdmextruder.def.json  fdmprinter.def.json
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  native-lib.cpp
src/main/cpp/docs/: generating_areas.md  slicing.md
src/main/cpp/src/: FffGcodeWriter.cpp  FffGcodeWriter.h  FffProcessor.h  LayerPlan.cpp  LayerPlanBuffer.cpp  LayerPlanBuffer.h  Scene.cpp  gcodeExport.cpp  gcodeExport.h
src/main/cpp/src/settings/types/: Angle.h
src/main/cpp/src/utils/: gettime.h  logoutput.cpp
src/main/java/com/example/myapplication/: MainActivity.kt
src/main/res/drawable-v24/: demo_progressbar.xml
src/main/res/layout/: activity_main.xml
src/main/res/values/: strings.xml
